--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,12 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
-/* :root {
-  
-} */
+@font-face {
+  font-family: "poppins";
+  src: url(../assets/font/Poppins/Poppins-Regular.ttf);
+}
+
+:root {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+html, body {
+  height: 100%;
+}
 
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "poppins", sans-serif;
 }
